2005-07-13  Douglas Bates  <bates@bates1-home>

	* R/lmList.R: lmList now uses the standard non-standard evaluation
	scheme for the model frame.

2005-05-19  Douglas Bates  <bates@bates1-home>

	* R/lmer.R (fn): Restored the ML in name MLdeviance from summary.

2005-04-18  Douglas Bates  <bates@bates1-home>

	* R/lmer.R: Choose method values appropriately for lmer with or
	without a family argument.

	* DESCRIPTION: change dependence to Matrix(>= 0.95-6)

	* R/lmList.R: Added argument pool to confint method for lmList and
	order to plot method for confint.lmList

2005-04-15  Douglas Bates  <bates@bates1-home>

	* DESCRIPTION: Change dependence to R (>= 2.1.0) and remove the
	contr.SAS definition and documentation.

2005-04-12  Douglas Bates  <bates@bates1-home>

	* R/lmer.R: Fixed problem with assignment of frame in lmer method
	with nonmissing family argument.

2005-04-06  Douglas Bates  <bates@bates1-home>

	* R/lmer.R: Fix with method to accomodate for nontrivial na.action

	* R/lmList.R: Repair the plot method for the lmList.confint class

2005-04-05  Douglas Bates  <bates@bates1-home>

	* R/lmer.R: Update of the "with" method.
	* : Removed humongous PDF file accidently included in tarball.
	Created release 0.95-3.
	

2005-02-27  Douglas Bates  <bates@bates1-home>

	* R/lme.R: Removed the stubs of the plot methods.

	* NAMESPACE: Remove imports from the Matrix package as it is
	listed in the Depends.

2005-02-24  Douglas Bates  <bates@bates1-home>

	* R/lmer.R (fn): Added an anova method for lmer objects that
	provides F tests based on the terms object.
	* data/ and man/: Moved all data sets from "Mixed-Effects Models
	in S and S-PLUS" to the MEMSS package and all other test data sets
	to the mlmRev package.

2005-01-24  Douglas Bates  <bates@bates7>

	* man/{guPrenat.Rd,guImmun.Rd,s3bbx.Rd,s3bby.Rd}: Add
	\encoding{latin1} per Kurt's request. 

2005-01-23  Douglas Bates  <bates@bates7>

	* R/lmer.R (fn): In the gradient function passed to optim, check