@@ -1,6 +1,6 @@
 Package: lme4
-Version: 0.97-1
-Date: 2005-07-13
+Version: 0.97-2
+Date: 2005-07-26
 Title: Linear mixed-effects models using S4 classes
 Author: Douglas Bates <bates@stat.wisc.edu> and
 	Deepayan Sarkar <deepayan@stat.wisc.edu>
@@ -8,7 +8,7 @@ Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Fit linear and generalized linear mixed-effects models.
 Depends: methods, R(>= 2.1.0), Matrix(>= 0.97-4), lattice
 Imports: graphics, stats
-Suggests: mlmRev, latticeExtra
+Suggests: mlmRev
 SaveImage: no
 LazyLoad: yes
 License: GPL version 2 or later
