@@ -1,32 +1,32 @@
-if (!isGeneric("getGroups")) {
-    ## Return the groups associated with object according to form.
-    setGeneric("getGroups",
-               function(object, form, level, data, sep, ...)
-               standardGeneric("getGroups"))
-}
+#if (!isGeneric("getGroups")) {
+#    ## Return the groups associated with object according to form.
+#    setGeneric("getGroups",
+#               function(object, form, level, data, sep, ...)
+#               standardGeneric("getGroups"))
+#}
 
-if (!isGeneric("getGroupsFormula")) {
-    ## Return the formula(s) for the groups associated with object.
-    ## The result is a one-sided formula unless asList is TRUE in which case
-    ## it is a list of formulas, one for each level.
-    setGeneric("getGroupsFormula",
-               function(object, asList = FALSE, sep = "/")
-               standardGeneric("getGroupsFormula"))
-}
+#if (!isGeneric("getGroupsFormula")) {
+#    ## Return the formula(s) for the groups associated with object.
+#    ## The result is a one-sided formula unless asList is TRUE in which case
+#    ## it is a list of formulas, one for each level.
+#    setGeneric("getGroupsFormula",
+#               function(object, asList = FALSE, sep = "/")
+#               standardGeneric("getGroupsFormula"))
+#}
 
-if (!isGeneric("getCovariate")) {
-    ## Return the primary covariate associated with object
-    setGeneric("getCovariate",
-               function(object, form = formula(object), data = list())
-               standardGeneric("getCovariate"))
-}
+#if (!isGeneric("getCovariate")) {
+#    ## Return the primary covariate associated with object
+#    setGeneric("getCovariate",
+#               function(object, form = formula(object), data = list())
+#               standardGeneric("getCovariate"))
+#}
 
-if (!isGeneric("getResponse")) {
-    ## Return the response variable associated with object
-    setGeneric("getResponse",
-               function(object, form = formula(object))
-               standardGeneric("getResponse"))
-}
+#if (!isGeneric("getResponse")) {
+#    ## Return the response variable associated with object
+#    setGeneric("getResponse",
+#               function(object, form = formula(object))
+#               standardGeneric("getResponse"))
+#}
 
 
 if (!isGeneric("lmList")) {
