@@ -1,3 +1,7 @@
+2005-07-26  Douglas Bates  <bates@localhost.localdomain>
+
+	* R/AllGeneric.R: Remove the getCovariate, etc. generics and methods
+
 2005-07-13  Douglas Bates  <bates@bates1-home>
 
 	* R/lmList.R: lmList now uses the standard non-standard evaluation
